grid overflow issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ body {
 /* For Webkit (Chrome, Safari, etc.) */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 11px;
 }
 
 ::-webkit-scrollbar-thumb {
